k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heki-web
  namespace: heki
  labels:
    app: heki
    component: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: heki
    component: web
